FIX: Make print size as opriginal size

--- a/src/components/modules/page.module.scss
+++ b/src/components/modules/page.module.scss
@@ -4,8 +4,8 @@
 }
 
 .sheet {
-    width: calc(100 / 21 * 21vw);
-    height: calc(100 / 21* 29.6vw);
+    width: 210mm;
+    height: 296mm;
     max-width: 210mm;
     max-height: 296mm;
     aspect-ratio: 21 / 29.6;
