--- a/src/components/modules/page.module.scss
+++ b/src/components/modules/page.module.scss
@@ -4,6 +4,7 @@
 }
 
 .sheet {
+    display: block;
     width: 210mm;
     height: 296mm;
     max-width: 210mm;
@@ -11,10 +12,17 @@
     aspect-ratio: 21 / 29.6;
     /* 1mm余裕をもたせる */
     page-break-after: always;
+    overflow: hidden;
+}
+
+.sheet_safari {
+    @extend .sheet;
+    height: 280mm;
 }
 
 html body {
     background: #eee;
+    position: static;
 }
 
 @media print {
